# chatbot_bash_openai

./: README.md  chatbot.py  pyproject.toml  requirements.txt
