[tool.poetry]
name = "chatbot-bash-openai"
version = "0.1.0"
description = ""
authors = ["Israel Oliveira <israelisaque@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
